I removed unnecessary queries and broke up the functions

--- a/core/templates/core/catalog.html
+++ b/core/templates/core/catalog.html
@@ -276,23 +276,21 @@
             <h3 style="margin-top:0;">📋 Инструкция</h3>
             <div class="instruction-text">
                 <p><b>Здравствуйте!</b> 👋</p>
-                <p>Поиск на WB. Предложение актуально <b>2 часа</b>.</p>
+                <p>Поиск на WB. Предложение актуально .</p>
                 
-                <p><b>1. Поиск:</b> Ввести в поисковую строку название товара.</p>
-                <p><b>2. Конкуренты:</b> Листаем, открываем и добавляем несколько <b>конкурентов</b>.</p>
+                <p><b>1. Поиск:</b> Ввести в поисковую строку артикул товара.</p>
                 <p class="important">⛔ Фильтры не используем !!!</p>
                 
                 <hr style="border:0; border-top:1px solid #eee; margin:15px 0;">
 
                 <p><b>📸 ЭТАП 1 (До заказа):</b></p>
                 <ul>
-                    <li>Прислать боту скрин <b>ПОИСКА</b> (виден наш товар + запрос).</li>
-                    <li>Прислать скрин <b>КОРЗИНЫ</b>.</li>
+                    <li>Прислать скрин ,что заказ оформлен.</li>
                 </ul>
                 
                 <p><b>🛒 ЭТАП 2 (Выкуп):</b></p>
                 <ul>
-                    <li>Оформить заказ, забрать с ПВЗ, <b>не отказываться!</b></li>
+                    <li>Забрать заказ с ПВЗ, <b>не отказываться!</b></li>
                     <li>Прислать скрин из раздела <b>"Покупки"</b> со статусом "Доставлено".</li>
                 </ul>
 
@@ -306,7 +304,7 @@
                     <li>Скрин чека с суммой.</li>
                 </ul>
 
-                <p><b>💰 Выплата:</b> через 2 недели после отзыва.</p>
+                <p><b>💰 Выплата:</b> через 2 недели с момента как оставили отзыва.</p>
                 <p style="text-align:center; margin-top:20px;"><b>Будьте прекрасны 🩷</b></p>
             </div>
             <button style="margin-top:10px; width:100%; border:none; background:transparent; color:#6c5ce7; font-weight:bold; padding:10px;" onclick="closeInstruction()">Понятно, закрыть</button>
